--- a/12 октября.html
+++ b/12 октября.html
@@ -74,8 +74,9 @@
 	 
 
 
-<h2>История</h2>
-	<h3></h3>
+<h2>Математика</h2>
+	<h3>221-235 все черные параграф 9
+</h3>
 
 <h2>Русский</h2>
   <h3>упр 118</h3>  
