--- a/11 октября.html
+++ b/11 октября.html
@@ -78,11 +78,13 @@
 	<h3>Найти записи объяснение признаков делимости</h3>
 
 <h2>Английский 1 группа</h2>
-  <h3>W.B p.12 ex 4</h3>  
+  <h3>W.B p.12 ex 4 и W.b страница 14</h3>  
   <h2>Литература</h2>
   <h3>Прочитать 12-18 главы. Подготовить пересказ 17главы ( эпизод с кольцом).</h3>  
     <h2>География</h2>
   <h3>параграф 35, записи в тетради. Знать виды масштаба.</h3>  
+	     <h2>Музыка</h2>
+  <h3>стр. 26-27 учебника музыка 6 класс.</h3>  
 	
 	 </center>
 	 
