--- a/11 октября.html
+++ b/11 октября.html
@@ -73,9 +73,9 @@
      <center>
 	 
 
-
 <h2>Математика</h2>
-	<h3>Найти записи объяснение признаков делимости</h3>
+	<h3>221-235 все черные параграф 9
+</h3>
 
 <h2>Английский 1 группа</h2>
   <h3>W.B p.12 ex 4 и W.b страница 14</h3>  
