--- a/12 октября.html
+++ b/12 октября.html
@@ -78,7 +78,8 @@
 
 <h2>Русский</h2>
   <h3>упр 118</h3>  
-
+<h2>История</h2>
+  <h3>Переписать термины из презентации в тетрадь</h3>
 	 </center>
 	 
 	 
