--- a/12 октября.html
+++ b/12 октября.html
@@ -80,6 +80,7 @@
   <h3>упр 118</h3>  
 <h2>История</h2>
   <h3>Переписать термины из презентации в тетрадь</h3>
+<a href="история.pptx">Презентация</a>
 	 </center>
 	 
 	 
