--- a/dz.html
+++ b/dz.html
@@ -69,10 +69,10 @@
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
 
-          <h3> <a href="11 октября.html" class="nb">Дз на 11 октября английский, математика, литература, география</a></h3>
+                    <h3> <a href="13 октября.html" class="nb">Дз на 13 октября физика, математика</a></h3>
           <h3> <a href="12 октября.html" class="nb">Дз на 12 октября русский</a></h3>
-
-                  <h3> <a href="9 октября.html" class="nb">Дз на 9 октября русский, биология</a></h3>
+          <h3> <a href="11 октября.html" class="nb">Дз на 11 октября английский, математика, литература, география</a></h3>
+        
 
     
 </center>
