--- a/13 октября.html
+++ b/13 октября.html
@@ -76,9 +76,9 @@
 
 
 <h2>Математика</h2>
-  <h3>упр 118</h3>  
+  <h3>Правила все 237,239 и п.9</h3>  
 <h2>Физика</h2>
-  <h3>Переписать термины из презентации в тетрадь</h3>
+  <h3></h3>
 
 	 </center>
 	 
