--- a/13 октября.html
+++ b/13 октября.html
@@ -75,9 +75,11 @@
 
 
 
-<h2>Математика</h2>
+<h2>Нагл. гео</h2>
   <h3>Правила все 237,239 и п.9</h3>  
 <h2>Физика</h2>
+  <h3>Примеры конвекции в декоративных целях. Способы изменения внутренней энергии</h3>
+  <h2>Русский</h2>
   <h3></h3>
 
 	 </center>
