--- a/dz.html
+++ b/dz.html
@@ -70,6 +70,7 @@
    <h2 class="nb">Дз и классные работы</h2><br>
 
                     <h3> <a href="13 октября.html" class="nb">Дз на 13 октября физика, нагл.гео, русский</a></h3>
+                                        <h3> <a href="14 октября.html" class="nb">Дз на 14 октября английский</a></h3>
           <h3> <a href="12 октября.html" class="nb">Дз на 12 октября русский</a></h3>
           <h3> <a href="11 октября.html" class="nb">Дз на 11 октября английский, математика, литература, география</a></h3>
         
