--- a/13 октября.html
+++ b/13 октября.html
@@ -76,7 +76,7 @@
 
 
 <h2>Нагл. гео</h2>
-  <h3>Правила все 237,239 и п.9</h3> 
+  <h3>страница 113 номера 9,10,11,12</h3> 
  
 <h2>Физика</h2>
   <h3>Примеры конвекции в декоративных целях. Способы изменения внутренней энергии</h3>
