--- a/14 октября.html
+++ b/14 октября.html
@@ -73,11 +73,10 @@
 	 
 
 
-
-
-
   <h2>Английский 1 группа</h2>
   <h3>w.b p. 13 ex.1,2</h3>
+    <h2>Математика</h2>
+  <h3>Правила все 237,239 и п.9</h3> 
 
 	 </center>
 	 
