--- a/14 октября.html
+++ b/14 октября.html
@@ -77,7 +77,8 @@
   <h3>w.b p. 13 ex.1,2</h3>
     <h2>Математика</h2>
   <h3>Правила все 237,239 и п.9</h3> 
-
+    <h2>Литература</h2>
+  <h3>Прочитать 12-18 главы романа "Дубровский". Подготовиться к тесту.</h3> 
 	 </center>
 	 
 	 
