--- a/14 октября.html
+++ b/14 октября.html
@@ -74,7 +74,8 @@
 
 
   <h2>Английский 1 группа</h2>
-  <h3>w.b p. 13 ex.1,2</h3>
+  <h3>w.b p. 13 ex.1,2<br><a href="англ14.jpg">Ответы</a> </h3>
+  
     <h2>Математика</h2>
   <h3>Правила все 237,239 и п.9</h3> 
     <h2>Литература</h2>
