--- a/Полезное.html
+++ b/Полезное.html
@@ -3,14 +3,14 @@
   <head>
 
     <meta charset="utf-8">
-   <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
-    <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Полезное.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="общие.js" defer=""></script>
     <link rel="icon" href="images/favicon1.ico">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
