--- a/15 октября.html
+++ b/15 октября.html
@@ -76,7 +76,7 @@
   <h2>Русский</h2>
   <h3>упр 134 задание 8 на тему осень за моим окном 8предложений</h3>
     <h2>История</h2>
-  <h3>Повторение главы I. Подготовка к контрольной работе "Эпоха раннего Средневековья" и письменное задание <a href="задание.pdf" >задание</a></h3> 
+  <h3>Повторение главы I. Подготовка к контрольной работе "Эпоха раннего Средневековья" и письменное задание <a href="задания.pdf" >задание</a></h3> 
     <h2>Литература</h2>
   <h3>сочинение по любой из записаных тем</h3> 
 	 </center>
