--- a/Полезное.html
+++ b/Полезное.html
@@ -72,7 +72,7 @@
 		<h3><a class="nb" href="https://drive.google.com/file/d/1USbV22DrJuoOvBm0uBaFe62DbYQ43jf2/view?usp=sharing" />Ответы на контрольные и проверочные по биологии</a></h3>
 				<h3><a class="nb" href="https://drive.google.com/file/d/1S6L0ShQMEti40Zr-2Yc819VzYANkMAGa/view?usp=drivesdk" />Ответы на контрольные и проверочные по английскому языку</a></h3>
 					<h3><a href="https://drive.google.com/file/d/1PmMoNs8NcYEQb9nWDxl-hP5_33xm38u3/view?usp=drivesdk" class="nb" >Диктанты по математике</a></h3>
-					 <h3><a class="nb" href="" />Методичка по физике</a></h3>
+					 <h3><a class="nb" href="https://drive.google.com/file/d/16uHQKUE5aJ_52nTU1T7nEzXu93MV0rZz/view?usp=sharing" />Методичка по физике</a></h3>
 				<h3><a class="nb" href="https://drive.google.com/file/d/1ApWu3NeV25H_MViSgu-adCxQCcDYulDP/view?usp=sharing">Задачник по физике</a></h3>
 					<h3><a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=drivesdk">Учебник по музыке</a></h3>
           </center>
