--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="u-align-left u-clearfix u-gradient u-section-1" id="sec-9707">
       <div class="u-clearfix u-sheet u-sheet-1" class="nb" >
         <h1 class="u-align-center u-text u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
-         <br> <span class="u-text-body-alt-color">Домашние </span>
+          <span class="u-text-body-alt-color">Домашние </span>
           <span class="u-text-body-alt-color">задания 6а</span>
         </h1>
         <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">ТФТЛ</h6>
@@ -93,7 +93,7 @@
 </center>
 	
         <h2 class="u-align-center u-text u-text-body-alt-color u-text-3">Отзывы </h2>
-      <h3>  <p class="u-align-center u-text u-text-body-alt-color u-text-4">Отправляйте свои отзывы и предложения на почту dz6a.app@gmail.com и они появытся на сайте!</p></h3>
+      <h3>  <p class="u-align-center u-text u-text-body-alt-color u-text-4">Отправляйте свои отзывы и предложения на почту dz6a.app@gmail.com и они появятся на сайте!</p></h3>
     <center>
   <h3 class="nb" >Харин Ростислав<h3>
       <h4 class="nb" >ОООООООЕЧНЬ рад что сайт обновил дизайн, глазам приятно стало.
