--- a/16 октября.html
+++ b/16 октября.html
@@ -77,7 +77,7 @@
   <h3>упр.137</h3>
 
     <h2>Биология</h2>
-  <h3>Учебник стр.136-139 читать, термины с определениями учить, РТ №2(стр.23), №8(стр.26). Посмотреть https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/dyhanie</h3> 
+  <h3>Учебник стр.136-139 читать, термины с определениями учить, РТ №2(стр.23), №8(стр.26). Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/dyhanie"> ссылка на интернет урок</a></h3> 
 	 </center>
 	 
 	 
