--- a/dz.html
+++ b/dz.html
@@ -68,10 +68,11 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	                                        <h3> <a href="18 октября.html" class="nb">Дз на 18 октября география, математика, литература</a></h3>
    	                      	                                        <h3> <a href="16 октября.html" class="nb">Дз на 16 октября русский, биология</a></h3>             
         <h3> <a href="15 октября.html" class="nb">Дз на 15 октября история, русский, литература</a></h3>
                                         <h3> <a href="14 октября.html" class="nb">Дз на 14 октября английский, математика, литература</a></h3>
-                    <h3> <a href="13 октября.html" class="nb">Дз на 13 октября физика, нагл.гео, русский</a></h3>
+
                                         
 
 
