--- a/18 октября.html
+++ b/18 октября.html
@@ -81,7 +81,7 @@
     <h2>Литература</h2>
   <h3>Подготовиться к сочинению</h3>
       <h2>География</h2>
-  <h3>Параграф 36. Рт стр.18-20 №1-9. https://yandex.ru/video/preview/?text=азимут%20видеоурок%206%20класс&path=wizard&parent-reqid=1633913837750704-12590686334004510397-vla1-3092-vla-l7-balancer-8080-BAL-5801&wiz_type=vital&filmId=5039793529714132279</h3>
+  <h3>Параграф 36. Рт стр.18-20 №1-9. <a href="https://yandex.ru/video/preview/?text=азимут%20видеоурок%206%20класс&path=wizard&parent-reqid=1633913837750704-12590686334004510397-vla1-3092-vla-l7-balancer-8080-BAL-5801&wiz_type=vital&filmId=5039793529714132279" >ссылка</a></h3>
 
 	 </center>
 	 
