--- a/19 октября.html
+++ b/19 октября.html
@@ -77,7 +77,7 @@
   <h3>w.b p. 16 ex. 8</h3>
   
     <h2>Математика</h2>
-  <h3>прорешать контрольную 5 номера 256, 259</h3> 
+  <h3>п.10 конспект с примерами, № 256,259. СР№5( до понедельника)</h3> 
 
       <h2>Русский</h2>
   <h3></h3>
