--- a/dz.html
+++ b/dz.html
@@ -68,12 +68,8 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	   	            <h3> <a href="20 октября.html" class="nb">Дз на 19 октября физика, русский </a></h3>
    	            <h3> <a href="19 октября.html" class="nb">Дз на 19 октября русский, математика, английский </a></h3>
-   	                                        <h3> <a href="18 октября.html" class="nb">Дз на 18 октября география, математика, литература</a></h3>
-   	                      	                                        <h3> <a href="16 октября.html" class="nb">Дз на 16 октября русский, биология</a></h3>             
-
-                                        
-
 
         
 
