--- a/20 октября.html
+++ b/20 октября.html
@@ -79,7 +79,7 @@
   <h3>читать и выполнить задания урок 6(виды теплообмена); урок 2 внутренняя энергия и расчет количества теплоты</h3> 
 
       <h2>Русский</h2>
-  <h3>140</h3>
+  <h3>ничего</h3>
 
 	 </center>
 	 
