--- a/20 октября.html
+++ b/20 октября.html
@@ -76,7 +76,7 @@
 
   
     <h2>Физика</h2>
-  <h3>читать и выполнить задания урок 6(виды теплообмена); урок 2 внутренняя энергия и расчет количества теплоты</h3> 
+  <h3>читать урок 6(виды теплообмена); урок 2 внутренняя энергия и расчет количества теплоты</h3> 
 
       <h2>Русский</h2>
   <h3>ничего</h3>
