--- a/21 октября.html
+++ b/21 октября.html
@@ -78,7 +78,7 @@
     <h2>Математика</h2>
   <h3>270,271 доделать </h3> 
    <h2>Литература</h2>
-  <h3> </h3> 
+  <h3> 1) стр. 115-118, прочитать, подготовиться к устному ответу , вопросы на стр. 117. 2)СТР. 118, ВЫРАЗИТЕЛЬНОЕ ЧТЕНИЕ.</h3> 
 
       <h2>Английский 1 группа</h2>
   <h3>подготовиться к контрольной. Ответы есть в группе Dz6a</h3>
