--- a/dz.html
+++ b/dz.html
@@ -68,13 +68,10 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	          <h3> <a href="22 октября.html" class="nb">Дз на 22 октября литература, русский, история, обществознание </a></h3>
    	   	   	            <h3> <a href="21 октября.html" class="nb">Дз на 21 октября математика, английский, литература </a></h3>
    	   	            <h3> <a href="20 октября.html" class="nb">Дз на 20 октября физика, русский </a></h3>
-   	            <h3> <a href="19 октября.html" class="nb">Дз на 19 октября русский, математика, английский </a></h3>
 
-        
-
-    
 </center>
       </div>
     </section>
