--- a/22 октября.html
+++ b/22 октября.html
@@ -78,7 +78,7 @@
     <h2>Обществознание </h2>
   <h3>учить записи в тетради </h3> 
    <h2>Литература</h2>
-  <h3> </h3> 
+  <h3> Тучи учить </h3> 
    <h2>История</h2>
   <h3> стр.109. Подготовить ответы на вопросы после пар.10: 1,2,3,7,9 (письменно в тетради)</h3> 
       <h2>Русский</h2>
