--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   <h3 class="nb" >Харин Ростислав<h3>
       <h4 class="nb" >ОООООООЕЧНЬ рад что сайт обновил дизайн, глазам приятно стало.
 Пожелания: добавить классные работы,добавить приложения на IOS и windows,Linux</h4>
-            <h3 class="nb" >Админ<h3>
-            	      <h4 class="nb" >Спасибо за отзыв. Приоложение для ios не выйдет 100%, а вот на windows будет в ближайшие время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h4>
+          <h3 class="nb" >Админ<h3>
+            	      <h4 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h4>
             	</center>
 </div>
     </section>
