--- a/23 октября.html
+++ b/23 октября.html
@@ -76,7 +76,7 @@
 
   
     <h2>Биология</h2>
-  <h3>Учебник стр.140-143 читать, ? устно, термины с определениями учить, РТ №№1 (стр.30), №3(стр.31) Посмотреть https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/peredvizhenie-vody-i-pitatelnyh-veschestv-v-rastenii </h3> 
+  <h3>Учебник стр.140-143 читать, ? устно, термины с определениями учить, РТ №№1 (стр.30), №3(стр.31) Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/peredvizhenie-vody-i-pitatelnyh-veschestv-v-rastenii" class="nb" >ссылка</a></h3> 
 
 	 </center>
 	 
