--- a/dz.html
+++ b/dz.html
@@ -68,6 +68,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   	   		          <h3> <a href="25 октября.html" class="nb">Дз на 25 октября литература, математика </a></h3>
    		          <h3> <a href="23 октября.html" class="nb">Дз на 23 октября биология </a></h3>
    	          <h3> <a href="22 октября.html" class="nb">Дз на 22 октября литература, русский, история, обществознание </a></h3>
    	   	   	            <h3> <a href="21 октября.html" class="nb">Дз на 21 октября математика, английский, литература </a></h3>
