--- a/26 октября.html
+++ b/26 октября.html
@@ -80,8 +80,8 @@
 
       <h2>Русский</h2>
   <h3></h3>
-      <h2>Английский </h2>
-  <h3></h3>
+      <h2>Английский 1 группа</h2>
+  <h3>доучить слова и W.b p.17 ex.1,2</h3>
       <h2>История</h2>
   <h3>пересказ 11 глава</h3>
 
