--- a/26 октября.html
+++ b/26 октября.html
@@ -79,7 +79,7 @@
   <h3>Правила.№284-290 зеленые. № 294(4,5,6)</h3> 
 
       <h2>Русский</h2>
-  <h3></h3>
+  <h3>выучить правила есть на главной странице сайта </h3>
       <h2>Английский 1 группа</h2>
   <h3>доучить слова и W.b p.17 ex.1,2</h3>
       <h2>История</h2>
