--- a/28 октября.html
+++ b/28 октября.html
@@ -76,14 +76,12 @@
 
   
 
-      <h2>Русский</h2>
-  <h3></h3>
-      <h2>Обществознание </h2>
-  <h3></h3>
-      <h2>История</h2>
+      <h2>Математика</h2>
+  <h3>292-298 ( зеленые)</h3>
+      <h2>Английский 1 группа </h2>
   <h3></h3>
         <h2>Литература</h2>
-  <h3></h3>
+  <h3>СТР. 126 выучить стихотворение «Утёс» или письменно ответить на вопросы стр. 126 1,2, Размышляем о прочитанном.</h3>
 
 	 </center>
 	 
