--- a/dz.html
+++ b/dz.html
@@ -68,6 +68,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+   			          <h3> <a href="29 октября.html" class="nb">Дз на 29 октября литература, обществознание </a></h3>
    	   	   	   		          <h3> <a href="28 октября.html" class="nb">Дз на 28 октября Математика, английский, литература </a></h3>
    	   	   		          <h3> <a href="26 октября.html" class="nb">Дз на 26 октября русский,математика, английский, история </a></h3>
    	   		          <h3> <a href="25 октября.html" class="nb">Дз на 25 октября литература, математика </a></h3>
