--- a/Главная.html
+++ b/Главная.html
@@ -3,8 +3,8 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="keywords" content="Домашние задания 6а">
-    <meta name="description" content="">
+  <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
+    <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
