--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
+	     <meta name="viewport" content="width=1476"> 
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Главная.css" media="screen">
