--- a/15 ноября.html
+++ b/15 ноября.html
@@ -71,8 +71,8 @@
 	 
 
 
-  <h2></h2>
-  <h3></h3>
+  <h2>Математика </h2>
+  <h3>Придумать 5 задач на совместное действие<a href="https://izamorfix.ru/matematika/arifmetika/zadachi_sovmest_rabota.html" >Ответы</a></h3>
   
    
 	 
