--- a/dz.html
+++ b/dz.html
@@ -68,7 +68,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
-   			          <h3> <a href="15 ноября.html" class="nb">Дз на 15 ноября</a></h3>
+   			          <h3> <a href="15 ноября.html" class="nb">Дз на 15 ноября Математика </a></h3>
    	   	   	   		         
 </center>
       </div>
