--- a/15 ноября.html
+++ b/15 ноября.html
@@ -72,7 +72,7 @@
 
 
   <h2>Математика </h2>
-  <h3>Придумать 5 задач на совместное действие<a href="https://izamorfix.ru/matematika/arifmetika/zadachi_sovmest_rabota.html" >Ответы</a></h3>
+  <h3>Придумать 5 задач на совместное действие<br><a href="https://izamorfix.ru/matematika/arifmetika/zadachi_sovmest_rabota.html" class="nb" >Ответы</a></h3>
   
    
 	 
