--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="keywords" content="Домашние задания 6а">
-    <meta name="description" content="">
+  <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
+    <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
@@ -89,6 +89,7 @@
 	<br>
 	<br>
 	<center>
+		<h2><a href="https://dz6ablog.blogspot.com" >Блог Класса</a>
 		     <h3> <a href="правило.jpg" class="nb">ПРАВИЛА ПО РУССКОМУ </a></h3>
      <h3> <a href="Dz6a.apk" class="nb">Скачать мобильно приложение Dz6a android</a></h3>
 </center>
