--- a/Главная.html
+++ b/Главная.html
@@ -75,6 +75,7 @@
   <br>
   <br>
   <center>
+  	<h2><a href="https://dz6ablog.blogspot.com" >Блог Класса</a>
   	     <h3> <a href="правило.jpg" class="nb">ПРАВИЛА ПО РУССКОМУ </a></h3>
      <h3> <a href="Dz6a.apk" class="nb">Скачать мобильно приложение Dz6a android</a></h3>
 </center>
