--- a/16 ноября.html
+++ b/16 ноября.html
@@ -74,7 +74,7 @@
   <h2>Математика </h2>
   <h3>314,316,319,321,333 5-8,334<br><a href="" >Ответы</a></h3>
   <h2>Английский 1 группа </h2>
-  <h3><br><a href="" >Ответы</a></h3>
+  <h3>W.b p.18 ex. 4<br><a href="англ16.jpg" >Ответы</a></h3>
   <h2>Русский </h2>
   <h3>Посмотреть презентацию<br><a href=https://docs.google.com/presentation/d/167ZanJBuX6mvCOpzhsImneho1CIEFZWu/edit?usp=drivesdk&ouid=110738411831301976790&rtpof=true&sd=true"" class="nb" >Презентация</a></h3>
   
