--- a/16 ноября.html
+++ b/16 ноября.html
@@ -77,7 +77,8 @@
   <h3>W.b p.18 ex. 4<br><a href="англ16.jpg" >Ответы</a></h3>
   <h2>Русский </h2>
   <h3>Посмотреть презентацию<br><a href=https://docs.google.com/presentation/d/167ZanJBuX6mvCOpzhsImneho1CIEFZWu/edit?usp=drivesdk&ouid=110738411831301976790&rtpof=true&sd=true"" class="nb" >Презентация</a></h3>
-  
+    <h2>История </h2>
+  <h3>Почитать тетради </h3>
    
 	 
 	 
