--- a/dz.html
+++ b/dz.html
@@ -68,8 +68,9 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
-   	   			          <h3> <a href="16 ноября.html" class="nb">Дз на 16 ноября Математика, Русский, Английский, История</a></h3>
-   			          <h3> <a href="15 ноября.html" class="nb">Дз на 15 ноября Математика </a></h3>
+   	   	   			          <h3> <a href="17 ноября.html" class="nb">Дз на 17 ноября Русский</a></h3>
+    <h3> <a href="18 ноября.html" class="nb">Дз на 18 ноября Математика </a></h3> 
+
    	   	   	   		         
 </center>
       </div>
