--- a/17 ноября.html
+++ b/17 ноября.html
@@ -73,7 +73,7 @@
 
 
   <h2>Русский </h2>
-  <h3><br><a href=https://docs.google.com/presentation/d/167ZanJBuX6mvCOpzhsImneho1CIEFZWu/edit?usp=drivesdk&ouid=110738411831301976790&rtpof=true&sd=true"" class="nb" >Презентация</a></h3>
+  <h3><br><a href="" class="nb" ></a></h3>
 
 
    
