--- a/18 ноября.html
+++ b/18 ноября.html
@@ -73,7 +73,7 @@
 
 
   <h2>Математика </h2>
-  <h3>правила. 336, 338, 340, 341 (8.9.10, 342<br><a href="" </a></h3>
+  <h3>правила. 336, 338, 340, 341 (8.9.10) , 342<br><a href="матем.html"> Ответы </a></h3>
 
 
    
