--- a/матем.html
+++ b/матем.html
@@ -1,6 +1,6 @@
-<img src="матем181.jpg" >
-<img src="матем182.jpg" >
-<img src="матем183.jpg" >
-<img src="матем184.jpg" >
-<img src="матем185.jpg" >
-<img src="матем186.jpg" >
+<img src="матем181.jpg" ><br>
+<img src="матем182.jpg" ><br>
+<img src="матем183.jpg" ><br>
+<img src="матем184.jpg" ><br>
+<img src="матем185.jpg" ><br>
+<img src="матем186.jpg" ><br>
