--- a/18 ноября.html
+++ b/18 ноября.html
@@ -75,6 +75,9 @@
   <h2>Математика </h2>
   <h3>правила. 336, 338, 340, 341 (8.9.10) , 342<br><a href="матем.html"> Ответы </a></h3>
 
+<h2>Английский 1 группа</h2>
+  <h3>W.b p. 19 ex.1<br><a href="англ18.jpg"> Ответы </a></h3>
+
 
    
 	 
