--- a/17 ноября.html
+++ b/17 ноября.html
@@ -75,6 +75,9 @@
   <h2>Русский </h2>
   <h3>4-5 слов профессионализмов и их значение</h3>
 
+  <h2>Изо </h2>
+  <h3>Дорисовать рисунок гелевыми ручками</h3>
+
 
    
 	 
