--- a/17 ноября.html
+++ b/17 ноября.html
@@ -77,7 +77,13 @@
 
   <h2>Изо </h2>
   <h3>Дорисовать рисунок гелевыми ручками</h3>
+  <h2>Геометрия </h2>
+  <h3>все задания 19п. шарыгин</h3>
 
+
+   
+	 
+	 
 
    
 	 
