--- a/dz.html
+++ b/dz.html
@@ -68,9 +68,9 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
-   	   	   			          <h3> <a href="17 ноября.html" class="nb">Дз на 17 ноября Русский, Изо, Геометрия</a></h3>
-    <h3> <a href="18 ноября.html" class="nb">Дз на 18 ноября Математика, Английский </a></h3> 
 
+    <h3> <a href="18 ноября.html" class="nb">Дз на 18 ноября Математика, Английский, Литература </a></h3> 
+   	   	   			          <h3> <a href="17 ноября.html" class="nb">Дз на 17 ноября Русский, Изо, Геометрия</a></h3>
    	   	   	   		         
 </center>
       </div>
