--- a/18 ноября.html
+++ b/18 ноября.html
@@ -78,7 +78,7 @@
 <h2>Английский 1 группа</h2>
   <h3>W.b p. 19 ex.1<br><a href="англ18.jpg"> Ответы </a></h3>
 <h2>Литература </h2>
-  <h3>готовиться к сочинению</h3>
+  <h3>готовиться к тесту</h3>
 
 
    
