--- a/Расписания.html
+++ b/Расписания.html
@@ -75,7 +75,7 @@
 	<a href="расп3.jpg"  class="nb"><h3>Расписание уроков</h3></a>
 	<a href="звонки.jpg" class="nb" ><h3>Расписание звонков</h3></a>
   <a href="обязан.jpg" class="nb"><h3>Обязанности дежурных</h3></a>
-  <a href="https://drive.google.com/file/d/1LtgOAvkIXIKijuwes6mT8qSh_V4BUXSs/view?usp=sharing" class="nb" ><h3>Расписание дежурств</h3></a>
+  <a href="https://drive.google.com/file/d/184Ihl3duKIL8OVO02y118M06xN_TBJyk/view?usp=drivesdk" class="nb" ><h3>Расписание дежурств</h3></a>
 	<a href="график.jpg" class="nb"><h3>График захода в лицей</h3></a>
 <a href="учителя_3118474130252.jpg" class="nb" ><h3>Предметы и учителя</h3></a>
 	<h3><a href="список.jpg" class="nb">Список литературы</a></h3>
