--- a/19 ноября.html
+++ b/19 ноября.html
@@ -74,7 +74,8 @@
 
   <h2>Русский </h2>
   <h3></h3>
-
+    <h2>История </h2>
+  <h3>1. Записать термины "Индульгенция" и "Схизма" в тетрадь. 2. Составить с соседом по парте диалог папы римского и императора о том, кто из них должен обладать высшей властью на Земле, продумайте аргументы обоих собеседников. 3. Устно ответить на вопросы: а) Кто такие еретики, как католическая церковь с ними боролась? б) В чем заключаются различия между православной и католической церквью? пар.13</h3>
 <h2>Литература </h2>
   <h3>готовиться к сочинению</h3>
 
