--- a/20 ноября.html
+++ b/20 ноября.html
@@ -74,6 +74,8 @@
 
   <h2>Русский </h2>
   <h3>231</h3>
+    <h2>Биология</h2>
+  <h3>Учебник стр.144-145 читать, ? устно, термины с определениями учить, РТ №№1,2,3(стр.33-34).</h3>
 
 
    
