--- a/22 ноября.html
+++ b/22 ноября.html
@@ -73,11 +73,11 @@
 
 
   <h2>Математика </h2>
-  <h3></h3>
+  <h3>344, 346, 348, 350, 352, 354, 356, 358</h3>
     <h2>География </h2>
   <h3></h3>
   <h2>Английский 1 группа </h2>
-  <h3>Учить слова модуль 3 a, b, c</h3>
+  <h3>Учить слова модуль 3 a, b, c  и заканчить диалоги</h3>
     <h2>Музыка </h2>
   <h3>Подготовиться к контрольнлй по произведениям</h3>
 
