--- a/dz.html
+++ b/dz.html
@@ -68,7 +68,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
-   	   	    <h3> <a href="22 ноября.html" class="nb">Дз на 22 ноября Математика, Английский, Музыка, География</a></h3> 
+   	   	    <h3> <a href="22 ноября.html" class="nb">Дз на 22 ноября Математика, Английский, Музыка, География, Литература </a></h3> 
    	    <h3> <a href="20 ноября.html" class="nb">Дз на 20 ноября Русский, Биология </a></h3> 
     <h3> <a href="19 ноября.html" class="nb">Дз на 19 ноября Русский, Литература, История </a></h3> 
   
