--- a/22 ноября.html
+++ b/22 ноября.html
@@ -78,8 +78,8 @@
   <h3>параграф 40, р.т. стр.28 №1-5</h3>
   <h2>Английский 1 группа </h2>
   <h3>Учить слова модуль 3 a, b, c  и заканчить диалоги</h3>
-    <h2>Музыка </h2>
-  <h3>Подготовиться к контрольнлй по произведениям</h3>
+    <h2>Физика </h2>
+  <h3></h3>
     <h2>Литература </h2>
   <h3>с. 156-157 читать</h3>
 
