--- a/22 ноября.html
+++ b/22 ноября.html
@@ -79,7 +79,7 @@
   <h2>Английский 1 группа </h2>
   <h3>Учить слова модуль 3 a, b, c  и заканчить диалоги</h3>
     <h2>Физика </h2>
-  <h3></h3>
+  <h3>закончить таблицу<br><a href="табл.jpg" >ответы</a></h3>
     <h2>Литература </h2>
   <h3>с. 156-157 читать</h3>
 
