--- a/22 ноября.html
+++ b/22 ноября.html
@@ -75,7 +75,7 @@
   <h2>Математика </h2>
   <h3>344, 346, 348, 350, 352, 354, 356, 358</h3>
     <h2>География </h2>
-  <h3>параграф 40, р.т. стр.28 №1-5<a href="гео22.jpg" >ответы</a></h3>
+  <h3>параграф 40, р.т. стр.28 №1-5<br><a href="гео22.jpg" >ответы</a></h3>
   <h2>Английский 1 группа </h2>
   <h3>Учить слова модуль 3 a, b, c  и заканчить диалоги</h3>
     <h2>Физика </h2>
