--- a/23 ноября.html
+++ b/23 ноября.html
@@ -78,7 +78,7 @@
   <h2>Английский 1 группа </h2>
   <h3>готовиться к контрольной</h3>
     <h2>История</h2>
-  <h3></h3>
+  <h3>ничего </h3>
     <h2>Русский</h2>
   <h3></h3>
 
