--- a/25 ноября.html
+++ b/25 ноября.html
@@ -69,7 +69,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
      <center>
 	 <h2>Математика</h2>
-  <h3></h3>
+  <h3>370-377 зел. </h3>
    <h2>Литература</h2>
   <h3>Выучить стих</h3>
 
