--- a/25 ноября.html
+++ b/25 ноября.html
@@ -71,7 +71,7 @@
 	 <h2>Математика</h2>
   <h3>370-377 зел. </h3>
    <h2>Литература</h2>
-  <h3>Выучить стих</h3>
+  <h3>выразительно прочитать стихотворения Ф.И.Тютчева «Неохотно и несмело», «Листья». Одно стихотворение выучить наизусть до пятницы.</h3>
 
 
 
