--- a/dz.html
+++ b/dz.html
@@ -68,12 +68,10 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
+	        <h3> <a href="29 ноября.html" class="nb">Дз на 29 ноября Математика</a></h3> 
    	   	   	   	   	    <h3> <a href="25 ноября.html" class="nb">Дз на 25 ноября Математика, Литература </a></h3> 
    	   	   	   	    <h3> <a href="24 ноября.html" class="nb">Дз на 24 ноября Русский </a></h3> 
-   	   	   	    <h3> <a href="23 ноября.html" class="nb">Дз на 23 ноября Математика, Английский, История, Русский </a></h3> 
-   	   	    <h3> <a href="22 ноября.html" class="nb">Дз на 22 ноября Математика, Английский, Физика, География, Литература </a></h3> 
- 
-
+   	   	   	   
    	   	   	   		         
 </center>
       </div>
