--- a/26 ноября.html
+++ b/26 ноября.html
@@ -72,16 +72,16 @@
   <h3>упр 260 вопрос 2 и лексичиский разбор слова порубки</h3>
    <h2>Литература</h2>
   <h3>выразительно прочитать стихотворения Ф.И.Тютчева «Неохотно и несмело», «Листья». Одно стихотворение выучить наизусть до пятницы.</h3>
+<h2>История</h2>
+  <h3>тем кому говорили пересказ определённой части параграфа</h3>
+   <h2>Обществознание </h2>
+  <h3>учить термины читать 4 параграф</h3>
 
 
 
 
    
-	 
-
-   
-	 
-	 
+	
       </div>
     </section>
     <section class="u-clearfix u-gradient u-section-2" id="sec-8383">
