--- a/26 ноября.html
+++ b/26 ноября.html
@@ -69,7 +69,7 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
      <center>
 	 <h2>Русский </h2>
-  <h3>упр 260 вопрос 2 и лексичиский разбор слова порубки</h3>
+  <h3>упр 260 вопрос 2 и лексичиский разбор слова земля</h3>
    <h2>Литература</h2>
   <h3>выразительно прочитать стихотворения Ф.И.Тютчева «Неохотно и несмело», «Листья». Одно стихотворение выучить наизусть до пятницы.</h3>
 <h2>История</h2>
