--- a/dz.html
+++ b/dz.html
@@ -68,8 +68,9 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
        <center>
    <h2 class="nb">Дз и классные работы</h2><br>
-<h3> <a href="26 ноября.html" class="nb">Дз на 26 ноября Литература, Русский, История, Обществознание </a></h3> 
+<h3> <a href="27 ноября.html" class="nb">Дз на 27 ноября Музыка, Биология </a></h3> 
 	        <h3> <a href="29 ноября.html" class="nb">Дз на 29 ноября Математика</a></h3> 
+	<h3> <a href="26 ноября.html" class="nb">Дз на 26 ноября Литература, Русский, История, Обществознание </a></h3> 
    	   	   	   	   	    <h3> <a href="25 ноября.html" class="nb">Дз на 25 ноября Математика, Литература </a></h3> 
    	   	   	   	    <h3> <a href="24 ноября.html" class="nb">Дз на 24 ноября Русский </a></h3> 
    	   	   	   
