--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -69,7 +69,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
           <center>
         <h2 class="nb">Ближайшие Контрольные </h2><br>
-          <h3 class="nb">Не найдено</h3>
+          <h3 class="nb">Биология 27 ноября<br>Тема:</h3>
   </center>
     
       </div>
