--- a/27 ноября.html
+++ b/27 ноября.html
@@ -70,7 +70,7 @@
      <center>
 	
    <h2>Биология</h2>
-  <h3></h3>
+  <h3>Учебник стр.146-149 читать, ? устно, РТ №№2,3(стр.37,38) Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/isparenie-vody-listyami-listopad" >ссылка</a></h3>
 <h2>Музыка</h2>
   <h3>готовиться к проверочной</h3>
 
