--- a/dz.html
+++ b/dz.html
@@ -74,7 +74,7 @@
    	   	   	   	   	    <h3> <a href="25 ноября.html" class="nb">Дз на 25 ноября Математика, Литература </a></h3> 
    	   	   	   	    <h3> <a href="24 ноября.html" class="nb">Дз на 24 ноября Русский </a></h3> 
 	       <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>   <br>
-	       <h2><a href="gdz.html"></a></h2>
+	       <h2><a href="gdz.html">.</a></h2>
    	   	   	   
    	   	   	   		         
 </center>
