--- a/27 ноября.html
+++ b/27 ноября.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
    <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
-    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    	    <meta name="viewport" content="width=device-width">
+<meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="dz.css" media="screen">
@@ -29,7 +30,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body" class="cont" ><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
        
     <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
         </a>
@@ -69,10 +70,10 @@
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
      <center>
 	
-   <h2>Биология</h2>
-  <h3>Учебник стр.146-149 читать, ? устно, РТ №№2,3(стр.37,38) Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/isparenie-vody-listyami-listopad" >ссылка</a></h3>
-<h2>Музыка</h2>
-  <h3>готовиться к проверочной</h3>
+   <h3>Биология</h3>
+  <h4>Учебник стр.146-149 читать, ? устно, РТ №№2,3(стр.37,38) Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/zhiznedeyatelnost-rasteniy/isparenie-vody-listyami-listopad" >ссылка</a></h4>
+<h3>Музыка</h3>
+  <h4>готовиться к проверочной</h4>
 
 
    
