--- a/Главная.html
+++ b/Главная.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
   <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
-    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    	    <meta name="viewport" content="width=device-width">
+<meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Главная.css" media="screen">
@@ -29,7 +30,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body u-overlap"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap" class="cont"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
      
               <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
         </a>
@@ -71,23 +72,22 @@
           <span class="u-text-body-alt-color">задания 6а</span>
         </h1>
          <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">ТФТЛ</h6>
-    <br>
+
   <br>
   <br>
   <center>
-  	<h2><a href="#" class="nb">Блог Класса</a>
-  	     <h3> <a href="правило.jpg" class="nb">ПРАВИЛА ПО РУССКОМУ </a></h3>
-     <h3> <a href="Dz6a.apk" class="nb">Скачать мобильно приложение Dz6a android</a></h3>
+  	<h5><a href="#" class="nb">Блог Класса</a></h5>
+     <h5> <a href="Dz6a.apk" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
 </center>
   
-        <h2 class="u-align-center u-text u-text-body-alt-color u-text-3">Отзывы </h2>
-      <h3>  <p class="u-align-center u-text u-text-body-alt-color u-text-4">Отправляйте свои отзывы и предложения на почту dz6a.app@gmail.com и они появятся на сайте!</p></h3>
+        <h2 class="u-align-center nb " >Отзывы </h2>
+      <h5>  <p class="u-align-center u-text u-text-body-alt-color u-text-4">Отправляйте свои отзывы и предложения на почту dz6a.app@gmail.com и они появятся на сайте!</p></h5>
          <center>
-  <h3 class="nb" >Харин Ростислав<h3>
-      <h4 class="nb" >ОООООООЕЧНЬ рад что сайт обновил дизайн, глазам приятно стало.
-Пожелания: добавить классные работы,добавить приложения на IOS и windows,Linux</h4>
-          <h3 class="nb" >Админ<h3>
-            	      <h4 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h4>
+  <h5 class="nb" >Харин Ростислав<h5>
+      <h6 class="nb" >ОООООООЕЧНЬ рад что сайт обновил дизайн, глазам приятно стало.
+Пожелания: добавить классные работы,добавить приложения на IOS и windows,Linux</h6>
+          <h5 class="nb" >Админ<h5>
+            	      <h6 class="nb" >Спасибо за отзыв. Приложение для ios не выйдет 100%, а вот на windows будет в ближайшее время. Что по поводу linux им пользуются не много людей но возможно на него тоже будет приложение</h6>
             	</center>
  </div>
     </section>
