--- a/Расписания.html
+++ b/Расписания.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
+    		    <meta name="viewport" content="width=device-width">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Расписания.css" media="screen">
@@ -30,7 +31,7 @@
     <meta property="og:url" content="index.html">
   </head>
   
-  <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body" class="cont" ><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
                 <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
@@ -71,16 +72,16 @@
     <section class="u-clearfix u-gradient u-section-1" id="sec-8cc8">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
           <center>
-        <h1 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">Расписания </h1><br>
-	<a href="расп3.jpg"  class="nb"><h3>Расписание уроков</h3></a>
-	<a href="звонки.jpg" class="nb" ><h3>Расписание звонков</h3></a>
-  <a href="обязан.jpg" class="nb"><h3>Обязанности дежурных</h3></a>
-  <a href="https://drive.google.com/file/d/18J9rPwozBqqx-x6wjCBzQrqcUmHOSom6/view?usp=drivesdk" class="nb" ><h3>Расписание дежурств</h3></a>
-	<a href="график.jpg" class="nb"><h3>График захода в лицей</h3></a>
-<a href="учителя_3118474130252.jpg" class="nb" ><h3>Предметы и учителя</h3></a>
-	<h3><a href="список.jpg" class="nb">Список литературы</a></h3>
-	<a href="консультации.jpg" class="nb" ><h3>График консультаций</h3></a>
-    <a href="внеурок.jpg" class="nb" ><h3>Расписание внеурочки</h3></a>
+        <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">Расписания </h2><br>
+	<a href="расп3.jpg"  class="nb"><h4>Расписание уроков</h4></a>
+	<a href="звонки.jpg" class="nb" ><h4>Расписание звонков</h4></a>
+  <a href="обязан.jpg" class="nb"><h4>Обязанности дежурных</h4></a>
+  <a href="https://drive.google.com/file/d/18J9rPwozBqqx-x6wjCBzQrqcUmHOSom6/view?usp=drivesdk" class="nb" ><h4>Расписание дежурств</h4></a>
+	<a href="график.jpg" class="nb"><h4>График захода в лицей</h4></a>
+<a href="учителя_3118474130252.jpg" class="nb" ><h4>Предметы и учителя</h4></a>
+	<h4><a href="список.jpg" class="nb">Список литературы</a></h4>
+	<a href="консультации.jpg" class="nb" ><h4>График консультаций</h4></a>
+    <a href="внеурок.jpg" class="nb" ><h4>Расписание внеурочки</h4></a>
 </center>
       </div>
 	  
