--- a/26 ноября.html
+++ b/26 ноября.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
    <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
-    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    	    <meta name="viewport" content="width=device-width">
+<meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="dz.css" media="screen">
@@ -29,7 +30,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body" class="cont" ><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
        
     <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
         </a>
@@ -68,14 +69,14 @@
     <section class="u-clearfix u-gradient u-section-1" id="sec-db88">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
      <center>
-	 <h2>Русский </h2>
-  <h3>упр 260 вопрос 2 и лексичиский разбор слова земля</h3>
-   <h2>Литература</h2>
-  <h3>выразительно прочитать стихотворения Ф.И.Тютчева «Неохотно и несмело», «Листья». Одно стихотворение выучить наизусть до пятницы.</h3>
-<h2>История</h2>
-  <h3>тем кому говорили пересказ определённой части параграфа</h3>
-   <h2>Обществознание </h2>
-  <h3>учить термины читать 4 параграф</h3>
+	 <h3>Русский </h3>
+  <h4>упр 260 вопрос 2 и лексичиский разбор слова земля</h4>
+   <h3>Литература</h3>
+  <h4>выразительно прочитать стихотворения Ф.И.Тютчева «Неохотно и несмело», «Листья». Одно стихотворение выучить наизусть до пятницы.</h4>
+<h3>История</h3>
+  <h4>тем кому говорили пересказ определённой части параграфа</h4>
+   <h3>Обществознание </h3>
+  <h4>учить термины читать 4 параграф</h4>
 
 
 
