--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -6,7 +6,8 @@
      <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Dz6a тфтл</title>
+  	    <meta name="viewport" content="width=device-width">
+  <title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Ближайшие.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -29,7 +30,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body" class="cont" ><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
        
 
         <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
@@ -68,8 +69,8 @@
     <section class="u-clearfix u-gradient u-section-1" id="sec-c978">
       <div class="u-clearfix u-sheet u-sheet-1">
           <center>
-        <h2 class="nb">Ближайшие Контрольные </h2><br>
-          <h3 class="nb">Биология 27 ноября<br>Тема:весь раздел</h3>
+        <h3 class="nb">Ближайшие Контрольные </h3><br>
+          <h4 class="nb">Биология 27 ноября<br>Тема:весь раздел</h4>
   </center>
     
       </div>
