--- a/Полезное.html
+++ b/Полезное.html
@@ -6,7 +6,8 @@
       <meta name="keywords" content="ТФТЛ,Dz6a,томский физико технический лицей, дз6a, дз, dz, 6а">
     <meta name="description" content="Это сайт Dz6a тфтл есть дз расписание и полезная информация. Тэги: тфтл,ТФТЛ,Dz6a, томский физико технический лицей">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Dz6a тфтл</title>
+    	    <meta name="viewport" content="width=device-width">
+<title>Dz6a тфтл</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Полезное.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -29,7 +30,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body" class="cont" ><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-523c"><div class="u-clearfix u-sheet u-sheet-1">
        
             <a href="index.html"><img src="images/logo.jpg" class="u-logo-image u-logo-image-1" data-image-width="80"></a>
         </a>
@@ -66,15 +67,15 @@
       </div></header>
     <section class="u-clearfix u-gradient u-section-1" id="sec-8fce">
       <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-        <h1 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">Полезное</h1>
+        <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1">Полезное</h2>
         <center>
-		  <h3><a class="nb" href="https://gdz.ru/class-6/matematika/didakticheskie-materiali-merzlyak" />Ответы на контрольные и проверочные по математике</a></h3>
-		<h3><a class="nb" href="https://drive.google.com/file/d/1USbV22DrJuoOvBm0uBaFe62DbYQ43jf2/view?usp=sharing" />Ответы на контрольные и проверочные по биологии</a></h3>
-				<h3><a class="nb" href="https://drive.google.com/file/d/1S6L0ShQMEti40Zr-2Yc819VzYANkMAGa/view?usp=drivesdk" />Ответы на контрольные и проверочные по английскому языку</a></h3>
-					<h3><a href="https://drive.google.com/file/d/1PmMoNs8NcYEQb9nWDxl-hP5_33xm38u3/view?usp=drivesdk" class="nb" >Диктанты по математике</a></h3>
-					 <h3><a class="nb" href="https://drive.google.com/file/d/16uHQKUE5aJ_52nTU1T7nEzXu93MV0rZz/view?usp=sharing" />Методичка по физике</a></h3>
-				<h3><a class="nb" href="https://drive.google.com/file/d/1ApWu3NeV25H_MViSgu-adCxQCcDYulDP/view?usp=sharing">Задачник по физике</a></h3>
-					<h3><a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=drivesdk">Учебник по музыке</a></h3>
+		  <h5><a class="nb" href="https://gdz.ru/class-6/matematika/didakticheskie-materiali-merzlyak" />Ответы на контрольные и проверочные по математике</a></h5>
+		<h5><a class="nb" href="https://drive.google.com/file/d/1USbV22DrJuoOvBm0uBaFe62DbYQ43jf2/view?usp=sharing" />Ответы на контрольные и проверочные по биологии</a></h5>
+				<h5><a class="nb" href="https://drive.google.com/file/d/1S6L0ShQMEti40Zr-2Yc819VzYANkMAGa/view?usp=drivesdk" />Ответы на контрольные и проверочные по английскому языку</a></h5>
+					<h5><a href="https://drive.google.com/file/d/1PmMoNs8NcYEQb9nWDxl-hP5_33xm38u3/view?usp=drivesdk" class="nb" >Диктанты по математике</a></h5>
+					 <h5><a class="nb" href="https://drive.google.com/file/d/16uHQKUE5aJ_52nTU1T7nEzXu93MV0rZz/view?usp=sharing" />Методичка по физике</a></h5>
+				<h5><a class="nb" href="https://drive.google.com/file/d/1ApWu3NeV25H_MViSgu-adCxQCcDYulDP/view?usp=sharing">Задачник по физике</a></h5>
+					<h5><a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=drivesdk">Учебник по музыке</a></h6>
           </center>
       </div>
     </section>
