--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
            <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Главная.html" style="padding: 16px;"><h3>Главная</h3></a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="dz.html" style="padding: 16px;"><h3>Дз и Класные работы</h3></a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="dz.html" style="padding: 16px;"><h3>Дз и Классные</h3></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Расписания.html" style="padding: 16px;"><h3>Расписания</h3></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Полезное.html" style="padding: 16px;"><h3>Полезное</h3></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Ближайшие.html" style="padding: 16px;"><h3>Ближайшие контрольные</h3></a>
