--- a/Главная.html
+++ b/Главная.html
@@ -67,20 +67,20 @@
       </div></header>
     <section class="u-align-left u-clearfix u-gradient u-section-1" id="sec-9707">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1" class="nb" >
-        <h1 class="u-align-center u-text u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
+        <h2 class="u-align-center u-text u-text-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
           <br><span class="u-text-body-alt-color" >Домашние </span>
           <span class="u-text-body-alt-color">задания <br>6а</span>
-        </h1>
+        </h2>
          <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">ТФТЛ</h6>
 
   <br>
   <br>
   <center>
   	<h5><a href="#" class="nb">Блог Класса</a></h5>
-     <h5> <a href="Dz6a.apk" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
+     <h5> <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a></h5>
 </center>
   
-        <h2 class="u-align-center nb " >Отзывы </h2>
+        <h3 class="u-align-center nb " >Отзывы </h3>
       <h5>  <p class="u-align-center u-text u-text-body-alt-color u-text-4">Отправляйте свои отзывы и предложения на почту dz6a.app@gmail.com и они появятся на сайте!</p></h5>
          <center>
   <h5 class="nb" >Харин Ростислав<h5>
