--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -69,7 +69,7 @@
     <section class="u-clearfix u-gradient u-section-1" id="sec-c978">
       <div class="u-clearfix u-sheet u-sheet-1">
           <center>
-        <h3 class="nb">Ближайшие Контрольные </h3><br>
+        <h3 class="nb" style="font-size: 22px" >Ближайшие Контрольные </h3><br>
           <h4 class="nb">Биология 27 ноября<br>Тема:весь раздел</h4>
   </center>
     
