--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
     <meta name="description" content="" />
 <meta name="keywords" content="" />
 <link rel="stylesheet" type="text/css" href="//appsgeyser.io/assets/9c131307/css/apps-style.css" media="all" />
-<title>Dz6a тфтл Android App - Download Dz6a тфтл for free</title>
+<title>Dz6a тфтл Android </title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta property="og:title" content="Android App: Dz6a тфтл"/>
@@ -27,8 +27,7 @@
     <link rel="canonical" href="http://appsgeyser.io/getwidget/Dz6a тфтл_14818100"/>
     <link rel="stylesheet" type="text/css" href="/css/getwidget.css?c=1"/>
 
-    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png?v=m2l9PBkm4l">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png?v=m2l9PBkm4l">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=m2l9PBkm4l">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=m2l9PBkm4l">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=m2l9PBkm4l">
@@ -551,7 +550,7 @@
             </div>
 
     <div class="aboutAppText">
-         <a href="Dz6a.apk">  <div class="mainText">Загрузить</div>
+         <a href="https://dz6a.netlify.app/Dz6a.apk">  <div class="mainText">Загрузить</div>
 
        
                  <center>   <img
